--- a/myTodoList/templates/todo/index.html
+++ b/myTodoList/templates/todo/index.html
@@ -1,10 +1,17 @@
 {% extends "layout.html" %} {% block title %} Index {% endblock %} {% block body
 %}
+
 <section>
   <!-- Add task form starts -->
   <form method="post" id="task-form">
     <!-- calendar -->
-    <input name="day" id="day" type="date" value="{{ request.form['day'] }}" />
+    <input
+      name="day"
+      id="day"
+      type="date"
+      value="{{ request.form['day'] }}"
+      required
+    />
 
     <!-- show alert -->
     <p id="alert"></p>
@@ -16,14 +23,14 @@
       type="text"
       placeholder="Add Task"
       value="{{ request.form['newTask'] }}"
+      required
     />
     <!-- Date and time -->
     <input
-      name="datetime"
-      id="datetime"
+      name="duedate"
+      id="duedate"
       type="datetime-local"
-      placeholder="MM/dd hh:mm A"
-      value="{{ request.form['datetime'] }}"
+      value="{{ request.form['duedate'] }}"
     />
     <!-- Priority -->
     <input
@@ -43,7 +50,7 @@
       <!-- <ul id="task-id" class="todo-lists">
             <li id="task-item">
               <span>${newTask}</span>
-              <span>${datetime}</span>
+              <span>${duedate}</span>
               <span>${priority}</span>
             </li>
             <div class="todo-list-btns">
@@ -54,15 +61,24 @@
       <ul>
         {% for task in tasks %}
         <li>
-          <span>${newTask}</span>
-          <span>${datetime}</span>
-          <span>${priority}</span>
+          <span>{{ task['task'] }}</span>
+          <span>{{ task['duedate'] }}</span>
+          <span>{{ task['priority'] }}</span>
         </li>
-        {% endfor %}
+
         <div class="todo-list-btns">
-          <button id="edit-btn" type="button">edit</button>
-          <button id="delete-btn" type="button">delete</button>
+          <a href="{{ url_for('todo.edit', id=task['id']) }}"
+            ><button id="edit-btn" type="button">edit</button></a
+          >
+
+          <form
+            action="{{ url_for('todo.delete', id=task['id']) }}"
+            method="post"
+          >
+            <input id="delete-btn" type="submit" value="Delete" />
+          </form>
         </div>
+        {% endfor %}
       </ul>
     </div>
     <!-- all tasks set button starts -->
