--- a/myTodoList/templates/layout.html
+++ b/myTodoList/templates/layout.html
@@ -11,6 +11,8 @@
     />
   </head>
   <body>
+    <div class="circle-1"></div>
+    <div class="circle-2"></div>
     <div class="container mx-auto">
       {% for message in get_flashed_messages() %}
       <div>{{ message }}</div>
