--- a/myTodoList/templates/list/list.html
+++ b/myTodoList/templates/list/list.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %} {% block title %} Today's Todo {% endblock %} {%
 block body %}
 
-<section>
-  <div class="flex flex-col justify-center items-center mt-6">
+<section class="backdrop-blur-xl bg-white/60 rounded-xl">
+  <div class="flex flex-col justify-center items-center mt-10 pt-6 px-8">
     <h3 class="text-4xl font-bold">TODAY'S TO DO</h3>
 
     <div class="m-8 text-2xl">
@@ -12,11 +12,11 @@ block body %}
           name="day"
           type="date"
           required
-          class="rounded py-1 px-2 border-2 border-blue-500 text-lg"
+          class="rounded py-1 px-2 outline-1 outline-offset-2 outline-blue-700 text-lg"
         />
         <button
           type="submit"
-          class="bg-blue-500 hover:bg-blue-300 text-white text-lg rounded py-2 px-4 ml-5"
+          class="text-sm bg-blue-800 hover:bg-blue-600 text-white rounded py-2 px-4"
         >
           SET
         </button>
@@ -25,18 +25,22 @@ block body %}
   </div>
 
   <!-- Todo list starts -->
-  <div>
+  <div class="px-8">
     {% for task in tasks %}
     <div class="flex flex-row justify-start items-center">
       <p
-        class="basis-auto rounded py-1 px-3 mr-1 mb-3 border-2 border-blue-500"
+        class="basis-auto rounded py-1 px-3 mr-1 mb-3 border border-blue-900 bg-white text-center"
       >
         {{ task['priority'] }}
       </p>
-      <p class="basis-1/4 rounded py-1 px-2 mr-1 mb-3 border-2 border-blue-500">
+      <p
+        class="basis-1/4 rounded py-1 px-2 mr-1 mb-3 border border-blue-900 bg-white"
+      >
         {{ task['duedate'] }}
       </p>
-      <p class="basis-1/2 rounded py-1 px-2 mr-1 mb-3 border-2 border-blue-500">
+      <p
+        class="basis-1/2 rounded py-1 px-2 mr-1 mb-3 border border-blue-900 bg-white"
+      >
         {{ task['task'] }}
       </p>
 
@@ -45,7 +49,7 @@ block body %}
         <a href="{{ url_for('todo.edit', id=task['id']) }}"
           ><button
             type="button"
-            class="ml-auto mr-1 bg-blue-500 hover:bg-blue-300 text-white rounded py-2 px-4"
+            class="ml-auto mr-1 bg-blue-800 hover:bg-blue-600 text-white rounded py-2 px-4"
           >
             edit
           </button></a
@@ -58,7 +62,7 @@ block body %}
           <input
             type="submit"
             value="Delete"
-            class="mr-1 bg-blue-500 hover:bg-blue-300 text-white rounded py-2 px-4"
+            class="mr-1 bg-blue-800 hover:bg-blue-600 text-white rounded py-2 px-4"
           />
         </form>
         <!-- Completed button -->
@@ -70,7 +74,7 @@ block body %}
             type="submit"
             name="completed"
             value="{{ task['completed'] == 0 and 'Incompleted' or 'Completed'}}"
-            class="bg-blue-500 hover:bg-blue-300 text-white rounded py-2 px-4"
+            class="bg-blue-800 hover:bg-blue-600 text-white rounded py-2 px-4"
           />
         </form>
       </div>
@@ -79,12 +83,12 @@ block body %}
   </div>
   <!-- Todo list ends -->
 
-  <div class="flex flex-row justify-around items-center mt-8">
+  <div class="flex flex-row justify-around items-center mt-8 pb-6 px-8">
     <!-- Go back to plan page starts -->
     <a href="{{ url_for('todo.index') }}"
       ><button
         type="button"
-        class="bg-blue-500 hover:bg-blue-300 text-white rounded py-2 px-4"
+        class="bg-blue-800 hover:bg-blue-600 text-white rounded py-2 px-4"
       >
         Plan
       </button></a
@@ -96,7 +100,7 @@ block body %}
       <input
         type="submit"
         value="Done"
-        class="bg-blue-500 hover:bg-blue-300 text-white rounded py-2 px-4"
+        class="bg-blue-800 hover:bg-blue-600 text-white rounded py-2 px-4"
       />
     </form>
     <!-- Today's task done ends -->
